[package]
name = "clast"
version = "1.0.0"
authors = ["BlueMoon2 <blueluna.two@gmail.com>"]
edition = "2024"
description = "A Rust library for Content-Defined Chunking (CDC)."
keywords = ["chunking", "cdc", "fastcdc"]
license = "MIT"
repository = "https://github.com/arcadiasofts/clast-rs"
readme = "README.md"
exclude = ["docs/*", "test/*"]

[dependencies]
bytes = { version = "1.11.0", optional = true }
tokio = { version = "1.48.0", features = ["io-util"], optional = true }
futures = { version = "0.3.31", optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = [
    "fs",
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
] }

[build-dependencies]
rand_chacha = "0.9.0"

[features]
default = ["fastcdc"]
fastcdc = ["bytes"]
async = ["tokio", "futures"]
